--- a/react04_passwordGenerator/index.html
+++ b/react04_passwordGenerator/index.html
@@ -9,7 +9,7 @@
         background-color: #414141;
       }
     </style>
-    <title>Vite + React</title>
+    <title>Password Generator</title>
   </head>
   <body>
     <div id="root"></div>
